--- a/media-quary.css
+++ b/media-quary.css
@@ -1,4 +1,5 @@
-/* 'sm': '640px',
+/* 'extra small : 576
+'sm': '640px',
 'md': '768px'
 'lg': '1024px'
 xl': '1280px'
@@ -95,6 +96,6 @@ xl': '1280px'
     }
     .discount-box{
         margin: 10px;
-        
+        overflow: hidden;
     }
 }
